--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pancakeswap-v2-subgraph",
+  "name": "jetswap-subgraph",
   "version": "1.0.0",
-  "repository": "git@github.com:pancakeswap/pancakeswap-v2-subgraph.git",
+  "repository": "https://github.com/gabbo-dam/jetswap-subgraph",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "codegen": "graph codegen --output-dir src/types/",
